# erpnext_mexico_compliance

./: .dockerignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  MANIFEST.in  README.md  apps.json  babel_extractors.csv  backend.Dockerfile  crowdin.yml  docker-bake.hcl  frontend.Dockerfile  license.txt  pyproject.toml  setup.py  skills-lock.json
.agents/skills/code-style/: SKILL.md
.agents/skills/frappe-api-development/: SKILL.md
.agents/skills/frappe-app-dev/: SKILL.md
.agents/skills/frappe-app-development/: SKILL.md
.agents/skills/frappe-desk-customization/: SKILL.md
.agents/skills/frappe-doctype-development/: SKILL.md
.agents/skills/frappe-enterprise-patterns/: SKILL.md
.agents/skills/frappe-frontend-development/: SKILL.md
.agents/skills/frappe-manager/: SKILL.md
.agents/skills/frappe-printing-templates/: SKILL.md
.agents/skills/frappe-project-triage/: SKILL.md
.agents/skills/frappe-reports/: SKILL.md
.agents/skills/frappe-router/: SKILL.md
.agents/skills/frappe-testing/: SKILL.md
.agents/skills/frappe-ui-patterns/: SKILL.md
.agents/skills/frappe-web-forms/: SKILL.md
.agents/skills/ui-design/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bump-version-on-release.yml  ci.yml  docker-ci.yml  linter.yml
docker/: Containerfile  apps.json
erpnext_mexico_compliance/: boot.py  hooks.py  install.py  migrate.py  modules.txt  patches.txt  setup.py  tasks.py  utils.py
erpnext_mexico_compliance/api/v1/: __init__.py
erpnext_mexico_compliance/banxico/: __init__.py  client.py
erpnext_mexico_compliance/banxico/sectors/: base.py  exchange_rates.py
erpnext_mexico_compliance/config/: desktop.py  docs.py
erpnext_mexico_compliance/controllers/: common.py  communication.py  queries.py  validators.py
erpnext_mexico_compliance/desktop_icon/: mexico_compliance.json
erpnext_mexico_compliance/erpnext_mexico_compliance/custom/: account.json  bank_account.json  (+8 more)
erpnext_mexico_compliance/fixtures/: cancellation_reason.json  custom_field.json  property_setter.json  sat_cfdi_use.json  sat_payment_method.json  sat_payment_option.json  sat_tax_regime.json  sat_tax_system.json
erpnext_mexico_compliance/fixtures_csv/: sat_product_or_service_groups.csv
erpnext_mexico_compliance/locale/: es.po  es_MX.po  main.pot
erpnext_mexico_compliance/migrate/: __init__.py  after_migrate.py
erpnext_mexico_compliance/overrides/: customer.py  employee.py  payment_entry.py  sales_invoice.py  sales_invoice_item.py
erpnext_mexico_compliance/sat/: __init__.py  catalogs.py
erpnext_mexico_compliance/translations/: es-MX.csv  es.csv
erpnext_mexico_compliance/utils/: __init__.py  cfdi.py  contacts.py  decorators.py  exchange_rates.py  files.py  permissions.py
erpnext_mexico_compliance/workspace_sidebar/: mexico_compliance.json
erpnext_mexico_compliance/ws_client/: __init__.py  auth.py  client.py  exceptions.py  models.py
mexican_accounting/: hooks.py  modules.txt
mexican_accounting/fixtures/: custom_field.json
mexican_accounting/fixtures_after_install/: sat_uom_key.json
mexico_compliance/: hooks.py  install.py  migrate.py  setup.py
mexico_compliance/fixtures/: custom_field.json  property_setter.json  sat_payment_mode.json  sat_way_to_pay.json
mexico_compliance/fixtures_after_install/: sat_uom_key.json
mexico_compliance/overrides/: customer.py  sales_invoice.py  sales_invoice_item.py
mexico_compliance/translations/: es-MX.csv
(+198 files in other folders)
