[project]
name = "erpnext_mexico_compliance"
authors = [{ name = "TI Sin Problemas", email = "info@tisinproblemas.com" }]
description = "ERPNext app to serve as base to comply with help with Mexican Rules and Regulations"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = ["zeep==4.2.1", "satcfdi==4.5.7"]
[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
