[project]
name = "erpnext_mexico_compliance"
authors = [{ name = "TI Sin Problemas", email = "info@tisinproblemas.com" }]
description = "ERPNext app to serve as base to comply with help with Mexican Rules and Regulations"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = ["satcfdi==4.7.3"]

[project.urls]
Homepage = "https://tisinproblemas.com/mexico-compliance"
Repository = "https://github.com/TI-Sin-Problemas/erpnext_mexico_compliance.git"
"Bug Reports" = "https://github.com/TI-Sin-Problemas/erpnext_mexico_compliance/issues"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
